<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarVentaActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/txtRegistrarVenta"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spProductos"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/spClientes"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spProductos" />

    <EditText
        android:id="@+id/etNumFactura"
        android:layout_width="265dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/etNumFact"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCantidad" />

    <Button
        android:id="@+id/btGuardarVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/btRegistrarVenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toEndOf="@+id/rgMetodoPago"
        app:layout_constraintTop_toBottomOf="@+id/tvResumenVenta" />

    <EditText
        android:id="@+id/etCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/etCantidad"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spClientes" />

    <TextView
        android:id="@+id/tvResumenVenta"
        android:layout_width="285dp"
        android:layout_height="185dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumFactura" />

    <RadioGroup
        android:id="@+id/rgMetodoPago"
        android:layout_width="85dp"
        android:layout_height="137dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResumenVenta">

        <RadioButton
            android:id="@+id/rbEfectivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbEfectivo" />

        <RadioButton
            android:id="@+id/rbTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbTarjeta" />

        <RadioButton
            android:id="@+id/rbQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbQR" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvCerrarRegVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCerrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>